<resources>
    <string name="app_name">Mystery</string>
    <string name="made_in_mystery">玄机工作室出品</string>
    <string name="area_code_china">+86</string>
    <string name="login_text">登录</string>
    <string name="or_text">或</string>
    <string name="register_text">注册</string>
    <string name="forget_password_text">忘记密码</string>
    <string name="phone_number_text">手机号码</string>
    <string name="phone_code_text">验证码</string>
    <string name="email_text">邮箱地址</string>
    <string name="password_text">登录密码</string>
    <string name="password_confirm_text">确认密码</string>
    <string name="get_login_code">获取验证码</string>
    <string name="email_login_text">邮箱登录</string>
    <string name="phone_login_text">手机登录</string>
    <string name="type_forget_phone">输入电话号码</string>
    <string name="type_phone_code">输入短信验证码</string>
    <string name="type_password">输入新的密码</string>
    <string name="register_key_text">注册码</string>
    <string name="user_info_hint">\t输入内容</string>
    <string name="user_info_occupation">职位</string>
    <string name="user_info_old">年龄</string>
    <string name="user_info_grade">年级</string>
    <string name="user_info_email">邮箱</string>
    <string name="user_info_blog">博客</string>
    <string name="user_info_job">岗位</string>
    <string name="user_info_experience">经历</string>

    <string name="home_text">首页</string>
    <string name="introduction_text">介绍</string>
    <string name="blog_text">博客</string>
    <string name="user_text">我的</string>
    <string name="map_text">地图</string>
    <string name="member_search">成员搜索</string>
    <string name="blog_search">搜索博客</string>
</resources>
