<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@id/bottom_tab_home">

    <fragment
        android:id="@+id/bottom_tab_home"
        android:name="com.mystery.fragment.HomeFragment"
        android:label="@string/home_text"
        tools:layout="@layout/fragment_introduction" />

    <fragment
        android:id="@+id/bottom_tab_blog"
        android:name="com.mystery.fragment.BlogFragment"
        android:label="@string/blog_text"
        tools:layout="@layout/fragment_blog"/>

    <fragment
        android:id="@+id/bottom_tab_user"
        android:name="com.mystery.fragment.UserFragment"
        android:label="@string/user_text"
        tools:layout="@layout/fragment_user"/>

</navigation>