<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/userinfo_backgroud"
    tools:context=".activity.UserInfoActivity"
    android:fitsSystemWindows="true">

    <!--分割线-->

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="246dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/userinfo_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000"
        android:id="@+id/line"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico4"
        app:layout_constraintBottom_toTopOf="@+id/ico5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000"
        android:id="@+id/line2"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_marginTop="50dp"
        />


    <!-- 职位 -->



    <ImageView
        android:id="@+id/ico1"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_userinfo_position"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintBottom_toTopOf="@+id/ico2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1"
         />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_occupation"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico1"
        app:layout_constraintRight_toLeftOf="@id/edt1"
        app:layout_constraintTop_toTopOf="@id/ico1"
        app:layout_constraintBottom_toBottomOf="@id/ico1"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt1"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_info_hint"
        android:background="@drawable/userinfo_edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico1"
        app:layout_constraintBottom_toBottomOf="@id/ico1"
        />

    <!-- 年龄 -->
    <ImageView
        android:id="@+id/ico2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_userinfo_age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico1"
        app:layout_constraintBottom_toTopOf="@id/ico3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_old"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico2"
        app:layout_constraintRight_toLeftOf="@id/edt2"
        app:layout_constraintTop_toTopOf="@id/ico2"
        app:layout_constraintBottom_toBottomOf="@id/ico2"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt2"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_info_hint"
        android:background="@drawable/userinfo_edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico2"
        app:layout_constraintBottom_toBottomOf="@id/ico2"
        />
    <!-- 邮箱 -->



    <ImageView
        android:id="@+id/ico4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_userinfo_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico3"
        app:layout_constraintBottom_toTopOf="@id/line"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/ico4"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@+id/ico4"
        app:layout_constraintRight_toLeftOf="@id/edt4"
        app:layout_constraintTop_toTopOf="@id/ico4" />
    <EditText
        android:id="@+id/edt4"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_info_hint"
        android:background="@drawable/userinfo_edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico4"
        app:layout_constraintBottom_toBottomOf="@id/ico4"
        />

    <!-- 年级 -->
    <ImageView
        android:id="@+id/ico3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_userinfo_grade"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico2"
        app:layout_constraintBottom_toTopOf="@id/ico4"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_grade"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico3"
        app:layout_constraintRight_toLeftOf="@id/edt3"
        app:layout_constraintTop_toTopOf="@id/ico3"
        app:layout_constraintBottom_toBottomOf="@id/ico3"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt3"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_info_hint"
        android:background="@drawable/userinfo_edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico3"
        app:layout_constraintBottom_toBottomOf="@id/ico3"
        />
    <!-- 博客 -->
    <ImageView
        android:id="@+id/ico5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_userinfo_blog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintBottom_toTopOf="@id/ico6"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_blog"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico5"
        app:layout_constraintRight_toLeftOf="@id/edt5"
        app:layout_constraintTop_toTopOf="@id/ico5"
        app:layout_constraintBottom_toBottomOf="@id/ico5"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt5"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_info_hint"
        android:background="@drawable/userinfo_edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico5"
        app:layout_constraintBottom_toBottomOf="@id/ico5"
        />
    <!-- 岗位 -->
    <ImageView
        android:id="@+id/ico6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_userinfo_postion2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico5"
        app:layout_constraintBottom_toTopOf="@id/ico7"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_job"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico6"
        app:layout_constraintRight_toLeftOf="@id/edt6"
        app:layout_constraintTop_toTopOf="@id/ico6"
        app:layout_constraintBottom_toBottomOf="@id/ico6"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt6"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_info_hint"
        android:background="@drawable/userinfo_edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico6"
        app:layout_constraintBottom_toBottomOf="@id/ico6"
        />

    <!-- 经历 -->
    <ImageView
        android:id="@+id/ico7"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_userinfo_experience"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico6"
        app:layout_constraintBottom_toTopOf="@id/text7"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_experience"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/text6"
        app:layout_constraintRight_toRightOf="@id/text6"
        app:layout_constraintTop_toTopOf="@id/ico7"
        app:layout_constraintBottom_toBottomOf="@id/ico7"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edtExp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_info_hint"
        android:gravity="left|top"
        android:background="@drawable/userinfo_edit_border"
        app:layout_constraintLeft_toLeftOf="@+id/ico7"
        app:layout_constraintRight_toRightOf="@+id/edt1"
        app:layout_constraintTop_toBottomOf="@id/ico7"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        />

    <ImageButton
        android:id="@+id/userinfo_return"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_back"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintRight_toLeftOf="@id/imageView5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:background="@android:color/transparent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>